# youth_registry_app

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  sync_to_hub.yml
src/backend/app/: main.py
src/backend/app/crud/: __init__.py  create_crud_app.py  create_crud_auth.py
src/backend/app/engine_database/: __init__.py  database.py
src/backend/app/routes/: __init__.py  routes_auth.py  routes_events.py
src/backend/app/schemas/: __init__.py  schema_user.py  youth_members_schema.py
src/backend/app/sql/query/: create_member.sql  delete_member.sql  get_all_members.sql  get_member_by_id.sql  update_member.sql  validate_id_member.sql
src/backend/app/validator/: __init__.py  user_validator_schema.py  youth_members_validator_schema.py
src/frontend/app/: Dockerfile  app.py  requirements.txt
src/frontend/app/.streamlit/: secrets.toml
src/utils/: __init__.py  connection_database.py  connection_database_.py  sql_read_file.py
