[tool.poetry]
name = "youth-registry-app"
version = "0.1.0"
description = ""
authors = ["joaobarreto27 <joao.vito1951@gmail.com>"]
readme = "README.md"
packages = [
    { include = "backend", from = "src" },
    { include = "frontend", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
fastapi = ">=0.129.0,<0.130.0"
uvicorn = ">=0.40.0,<0.41.0"
sqlalchemy = ">=2.0.46,<3.0.0"
email-validator = ">=2.3.0,<3.0.0"
psycopg-binary = ">=3.3.2,<4.0.0"
python-dotenv = ">=1.2.1,<2.0.0"
passlib = ">=1.7.4,<2.0.0"
pydantic = ">=2.12.5,<3.0.0"
pyjwt = ">=2.11.0,<3.0.0"
python-multipart = ">=0.0.22,<0.0.23"
pre-commit = ">=4.5.1,<5.0.0"
streamlit = ">=1.54.0,<2.0.0"
requests = ">=2.32.5,<3.0.0"
taskipy = "^1.14.1"
asyncpg = "^0.31.0"

[tool.taskipy.tasks]
ci = "pre-commit run --all-files"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
